changes for heroku dep

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h2>Image Search Abtraction Microservice</h2></br>
+        <h2>File Meta Format Microservice</h2></br>
 
         <h4> User stories:</h4>
         <ol class="user-stories">
@@ -27,7 +27,7 @@
       <div class="examples">
         <blockquote>
         <h3>Example API usage:</h3>
-          <span class="urls"><strong>Post FormData object to this URL:</strong> https://file_meta_format.herokuapp.com/load</span></br>
+          <span class="urls"><strong>Post FormData object to this URL:</strong> https://filemetafrmt.herokuapp.com/load</span></br>
         </blockquote>
         <blockquote>
           <h3>Example output in JSON:</h3>
